# devops-hands-on-project-hivebox

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  main.py  pyproject.toml  requirements.txt  version-getter.sh
.github/workflows/: hivebox-cd.yml  hivebox-ci.yml  scorecard.yml
docs/: RESOURCES.md
k8_manifests/: hivebox-confimap.yaml  hivebox-deployment.yaml  hivebox-ingress.yaml  hivebox-service.yaml  kind.yaml
src/: main.py  print_version.py
tests/: conftest.py  test_app.py  test_integration_app.py  test_unit_app.py
